syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message HomeSaveArrangementNoChangeReq {
	uint32 scene_id = 9;
}