syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "ResVersionConfig.proto";
import "BlockInfo.proto";
import "ShortAbilityHashPair.proto";
import "FeatureBlockInfo.proto";


message PlayerLoginRsp {
	double total_tick_time = 28;
	bytes sc_info = 5;
	bytes player_data = 14;
	uint64 login_rand = 31;
	string register_cps = 8;
	string client_md5 = 6;
	string client_silence_md5 = 12;
	string client_silence_version_suffix = 1;
	string client_version_suffix = 11;
	string game_biz = 17;
	string next_resource_url = 3;
	string country_code = 16;
	string birthday = 15;
	int32 ability_hash_code = 34;
	int32 retcode = 32;
	bool is_enable_client_hash_debug = 26;
	bool is_login_rsp_split = 23;
	bool is_new_player = 19;
	bool is_sc_open = 25;
	bool is_use_ability_hash = 24;
	bool is_audit = 22;
	bool is_data_need_relogin = 20;
	bool is_transfer = 35;
	bool is_relogin = 21;
	uint32 player_data_version = 33;
	uint32 target_home_owner_uid = 18;
	uint32 client_silence_data_version = 29;
	uint32 client_data_version = 27;
	uint32 target_uid = 30;
	ResVersionConfig next_res_version_config = 13;
	ResVersionConfig res_version_config = 7;
	repeated FeatureBlockInfo feature_block_info_list = 10;
	repeated ShortAbilityHashPair short_ability_hash_map = 4;
	map<string, int32> ability_hash_map = 2;
	map<uint32, BlockInfo> block_info_map = 9;
}